added iso management

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,28 @@ nextcloud/*
 !nextcloud/www/nextcloud/config/config.php
 prometheus/prometheus.yml
 frigate/config.yml
+
+mediawiki
+
+jellyfin/
+!jellyfin/config/
+!jellyfin/config/config/
+
+transmission
+!transmission/config
+
+qbittorrent/
+!qbittorrent/config
+qbittorrent/config/wael.list.p2p
+
+heimdall/
+!heimdall/config/www/app.sqlite
+
+prowlarr/config/Definitions/
+prowlarr/config/logs/
+
+radarr/config/logs/
+radarr/config/MediaCover/
+
+sonarr/config/logs/
+sonarr/config/MediaCover/
